--- a/flux/apps/service.yaml
+++ b/flux/apps/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: pathways-cloud-api-svc
+  namespace: nginx
 spec:
   type: LoadBalancer
   selector:
