--- a/flux/apps/myapplication.yaml
+++ b/flux/apps/myapplication.yaml
@@ -23,5 +23,8 @@ spec:
       containers:
       - image: pochaakshybridapi20230911101608.azurecr.io/pochaakshybridapi:latest
         name: nginx
+        ports:
+        - name: http
+          containerPort: 80
         resources: {}
 status: {}
