--- a/flux/apps/myapplication.yaml
+++ b/flux/apps/myapplication.yaml
@@ -21,7 +21,7 @@ spec:
       imagePullSecrets:
       - name: regcred
       containers:
-      - image: pochaakshybridapi20230911101608.azurecr.io/pochaakshybridapi:latest
+      - image: pochaakshybridapi20230911101608.azurecr.io/pochaakshybridapi:ver1
         name: nginx
         ports:
         - name: http
