--- a/flux/apps/myapplication.yaml
+++ b/flux/apps/myapplication.yaml
@@ -27,4 +27,12 @@ spec:
         - name: http
           containerPort: 80
         resources: {}
+        volumeMounts:  
+        - name: nfs-volume
+          mountPath: /myfileshare
+      volumes:
+        - name: nfs-volume
+          nfs:
+            server: 192.168.0.201
+            path: /pathdata
 status: {}
